--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
+        style="@android:style/Widget.DeviceDefault.Light.HorizontalScrollView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
